Add configurable default username functionality
- Add default_username setting to defaults/core.yaml (default: cloud-user)
- Implement deep_merge and merge_core_config_overrides in converter.py
- Update AWS and Azure providers to use configurable default username
- Add core configuration documentation in docs/configuration/
- Update README.md with configurable username section
- Update AI training guide with --analyze functionality
- Remove core configuration from schema (loaded from defaults/core.yaml)
- Fix verbose output for GCP region availability and size mapping
- Update defaults/README.md to document core.yaml
- Fix unreachable code in main.py and update .vulture ignore list

--- a/defaults/core.yaml
+++ b/defaults/core.yaml
@@ -66,6 +66,11 @@ default_tags:
 
 # Security and Compliance Settings
 security:
+  # Default username for instances across all cloud providers
+  # This username will be used as the default for SSH access and VM creation
+  # Can be overridden per instance with the 'username' field
+  default_username: "cloud-user"
+  
   # Default SSH public key for instances (can be overridden per provider)
   # This will be used if no ssh_public_key is specified in the YAML
   # Can also be set via SSH_PUBLIC_KEY or YAMLFORGE_SSH_PUBLIC_KEY environment variables
