Improve provider implementations and cleanup codebase
- Remove debug print statements from credentials.py for cleaner output
- Update examples/multi-cloud.yaml with better GUID and spec-based sizing
- Add comprehensive multi-cloud example with advanced configurations
- Enhance OpenShift documentation with detailed day2 operations guide
- Improve IBM VPC and IBM Classic provider implementations
- Update GCP provider with better error handling and metadata support
- Clean up OpenShift provider base classes and implementations
- Update VMware provider with improved resource generation
- Standardize provider method signatures and error handling
- Update mappings for better consistency across providers
- Fix line endings in .cursorrules file

--- a/examples/multi-cloud.yaml
+++ b/examples/multi-cloud.yaml
@@ -1,4 +1,4 @@
-guid: "multi1"
+guid: "mult1"
 
 yamlforge:
   cloud_workspace:
@@ -52,9 +52,10 @@ yamlforge:
         tier: "demo"
     
     - name: "cheapest-vm-{guid}"
-      region: "us-east-2"
+      location: "us-east"
       provider: "cheapest"
-      size: "large"
+      cores: 2
+      memory: 4096
       image: "RHEL9-latest"
       security_groups: ["demo-sg-{guid}"]
       tags:
